# UnrealFps

./: .gitignore  CMakeLists.txt  FpsCpp.uproject  FpsCpp.workspace  FpsCppCodeCompletionFolders.txt  FpsCppCodeLitePreProcessor.txt
Config/: DefaultEditorUserSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/FirstPerson/Materials/: PP_OutlineCustomDepthOcclusion.uasset
Content/FirstPersonCPP/Blueprints/: BP_FirstPersonCharacter.uasset  BP_FirstPersonProjectile.uasset  BP_MyGameMode.uasset  BP_MyPlayerController.uasset  BP_ShinyCylinderPickup.uasset  BP_YellowCubePickup.uasset  FirstPersonCharacter.uasset  FirstPersonProjectile.uasset  MyGameMode_BP.uasset  MyPlayerController.uasset  NpcAIController_BP.uasset  NpcBehaviorTree.uasset  NpcBlackboard.uasset  NpcCharacter_BP.uasset  Pickup.uasset  ShinyCylinderPickup.uasset  UW_Inventory.uasset  UW_InventorySlot.uasset  YellowCubePickup.uasset
Content/FirstPersonCPP/Maps/: DarkHallway.umap
Content/StarterContent/Architecture/: Floor_400x400.uasset
Source/: FpsCpp.Target.cs  FpsCppEditor.Target.cs
Source/FpsCpp/: BTService_CheckForPlayer.cpp  BTService_CheckForPlayer.h  BTTask_MoveToCustom.cpp  BTTask_MoveToCustom.h  FpsCpp.Build.cs  FpsCpp.cpp  FpsCpp.h  FpsCppCharacter.cpp  FpsCppCharacter.h  FpsCppGameMode.cpp  FpsCppGameMode.h  FpsCppHUD.cpp  FpsCppHUD.h  FpsCppProjectile.cpp  FpsCppProjectile.h  InventorySlotWidget.cpp  InventorySlotWidget.h  InventoryWidget.cpp  InventoryWidget.h  MyPlayerController.cpp  MyPlayerController.h  NpcAIController.cpp  NpcAIController.h  NpcCharacter.cpp  NpcCharacter.h  PickupActor.cpp  PickupActor.h
